--- a/delta-amss/delta-service-accounts.yaml
+++ b/delta-amss/delta-service-accounts.yaml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: delta-demo-service-accounts
-  namespace: delta
+  #namespace: delta
   labels: 
     name: delta-demo-accounts
     app: service
@@ -81,7 +81,7 @@ kind: Service
 apiVersion: v1
 metadata: 
   name: delta-demo-service-accounts
-  namespace: delta
+  #namespace: delta
 spec:
   ports:
   - protocol: TCP
