--- a/delta-amss/delta-service-imvbizpark.yaml
+++ b/delta-amss/delta-service-imvbizpark.yaml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: delta-demo-service-imvbizpark
-  namespace: delta
+  #namespace: delta
   labels: 
     name: delta-demo-imvbizpark
     app: service
@@ -89,7 +89,7 @@ kind: Service
 apiVersion: v1
 metadata: 
   name: delta-demo-service-imvbizpark
-  namespace: delta
+  #namespace: delta
 spec:
   ports:
   - protocol: TCP
