--- a/delta-amss/delta-service-imvretail.yaml
+++ b/delta-amss/delta-service-imvretail.yaml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: delta-demo-service-imvretail
-  namespace: delta
+  #namespace: delta
   labels: 
     name: delta-demo-imvretail
     app: service
@@ -87,7 +87,7 @@ kind: Service
 apiVersion: v1
 metadata: 
   name: delta-demo-service-imvretail
-  namespace: delta
+  #namespace: delta
 spec:
   ports:
   - protocol: TCP
