--- a/delta-amss/delta-service-mixbudget.yaml
+++ b/delta-amss/delta-service-mixbudget.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: delta-demo-mixbudget-appsettings
-  namespace: delta
+  #namespace: delta
 data:
   appsettings.json: |
     {
@@ -49,7 +49,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: delta-demo-services-mixbudget
-  namespace: delta
+  #namespace: delta
   labels: 
     name: delta-demo-mixbudget
     app: services
@@ -99,7 +99,7 @@ kind: Service
 apiVersion: v1
 metadata: 
   name: delta-demo-services-mixbudget
-  namespace: delta
+  #namespace: delta
 spec:
   ports:
   - protocol: TCP
